ey-cart.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ey-cart
  namespace: thanu-ns
spec: 
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 2
  selector: 
    matchLabels:
      app: ey-cart
  template:
    metadata:
      labels:
        app: ey-cart
    spec: 
      containers:
        - name: fitness-container
          image: muralisocial123/ey-cart:v1.1.0 
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"  
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "265m"

---
apiVersion: v1
kind: Service
metadata:
  name: ey
  namespace: thanu-ns
spec:
  selector:
    app: ey-cart
  ports:  
    - port: 3001
      targetPort: 3000
  type: ClusterIP
