gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway 
metadata:
  name: example-gateway
  namespace: thanu-ns
spec:
  gatewayClassName: kgateway 
  listeners:
  - name: http
    protocol: HTTP  
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
