flipkart-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flipkart-route 
  namespace: thanu-ns
spec:
  parentRefs:
    - name: example-gateway
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: flip
          port: 80
